--- a/redePets-frontend/src/app/component/inicio-deslogado/inicio-deslogado.component.html
+++ b/redePets-frontend/src/app/component/inicio-deslogado/inicio-deslogado.component.html
@@ -36,7 +36,8 @@
             <p>A Rede Pets é uma plataforma que visa conectar pessoas que desejam adotar pets com outras
               que possuem pets disponíveis para adoção.
             </p>
-            <p><a routerLink="/cadastrar" class="font-weight-bold cor-marrom">Cadastre-se</a> ou <a routerLink="/entrar" class="font-weight-bold cor-marrom">entre</a> se já possui uma conta.</p>
+            <p><a routerLink="/cadastrar" class="font-weight-bold cor-marrom">Cadastre-se</a> ou <a routerLink="/entrar"
+                class="font-weight-bold cor-marrom">entre</a> se já possui uma conta!</p>
           </div>
 
         </div>
@@ -48,129 +49,142 @@
 
 <div class="container">
 
-<h2 class="m-5 text-center">Missão, visão e valores</h2>
+  <h2 class="m-5 text-center">Missão, visão e valores</h2>
 
   <div class="card-deck mb-5">
-  <div class="card">
-    <img class="card-img-top" src="../../../assets/img/desenhos/amico-laranja-adopt-a-pet.png" alt="Imagem de capa do card">
-    <div class="card-body">
-      <h5 class="card-title">Missão</h5>
-      <p class="card-text">Nossa missão é facilitar a busca de bons lares para os animais, diminuindo o número de abandonos nas ruas. </p>
+    <div class="card">
+      <img class="card-img-top" src="../../../assets/img/desenhos/amico-laranja-adopt-a-pet.png"
+        alt="Imagem de capa do card">
+      <div class="card-body">
+        <h5 class="card-title">Missão</h5>
+        <p class="card-text">Nossa missão é facilitar a busca de bons lares para os animais, diminuindo o número de
+          abandonos nas ruas. </p>
+      </div>
     </div>
-  </div>
-  <div class="card">
-    <img class="card-img-top" src="../../../assets/img/desenhos/amico-vinho-dog-walking.png" alt="Imagem de capa do card">
-    <div class="card-body">
-      <h5 class="card-title">Visão</h5>
-      <p class="card-text">Nossa visão é a de que todos os animais têm algo de especial a oferecer, independente da raça ou idade. </p>
-    </div>
-  </div>
 
-  <div class="card">
-    <img class="card-img-top" src="../../../assets/img/desenhos/amico-laranja-animal-shelter.png" alt="Imagem de capa do card">
-    <div class="card-body">
-      <h5 class="card-title">Valores</h5>
-      <p class="card-text">Nossos valores são o de acreditar que vidas não devem ser vendidas, por isso devemos valorizar a adoção. </p>
+    <div class="card">
+      <img class="card-img-top" src="../../../assets/img/desenhos/amico-vinho-dog-walking.png"
+        alt="Imagem de capa do card">
+      <div class="card-body">
+        <h5 class="card-title">Visão</h5>
+        <p class="card-text">Nossa visão é a de que todos os animais têm algo de especial a oferecer, independente da
+          raça ou idade. </p>
+      </div>
+    </div>
+
+    <div class="card">
+      <img class="card-img-top" src="../../../assets/img/desenhos/amico-laranja-animal-shelter.png"
+        alt="Imagem de capa do card">
+      <div class="card-body">
+        <h5 class="card-title">Valores</h5>
+        <p class="card-text">Nossos valores são o de acreditar que vidas não devem ser vendidas, por isso devemos
+          valorizar a adoção. </p>
+      </div>
     </div>
   </div>
-</div>
 
 </div>
 
 
 <!--Sobre nós-->
 <div class="container colum-md-12">
+
+  <h2 class="m-5 text-center">Nossa equipe</h2>
+
   <div class="row d-flex justify-content-center">
 
-      <div class="col-md-2 mb-2">
-        <div class="card-body">
-          <div class="card-top"> 
-            <img class="rounded-circle" src="https://i.imgur.com/sYYrtmF.jpg
+    <div class="col-md-2">
+      <div class="card-body card-top">
+        <img class="rounded-circle" src="https://i.imgur.com/sYYrtmF.jpg
             " width="100" height="100">
-          
-              <a class="btn btn-light mt-2 btn-sm w-100 h-100 p-0" aria-disabled="true"role="button">Diego Alonso</a>
-              Contatos:
-              <p class="icons-size">
-                <a href="https://www.linkedin.com/in/diego-alonso-0a0729b4/" target="_blank"><i class="fa fa-linkedin-square mr-1 text-dark" aria-hidden="true"></i></a>
-                <a href="https://github.com/diegoalonso231" target="_blank"><i class="fa fa-github-square text-dark" aria-hidden="true"></i></a>
-              </p>
-          </div>
-        </div>
+        <p class="mt-4">Diego Alonso</p>
+        <p class="icons-size">
+          <a href="https://www.linkedin.com/in/diego-alonso-0a0729b4/" target="_blank">
+            <i class="fa fa-linkedin-square mr-1" aria-hidden="true"></i>
+          </a>
+          <a href="https://github.com/diegoalonso231" target="_blank">
+            <i class="fa fa-github-square" aria-hidden="true"></i>
+          </a>
+        </p>
       </div>
+    </div>
 
-      <div class="col-md-2 mb-2 ">
-        <div class="card-body">
-          <div class="card-top">
-            <img class="rounded-circle" src="https://i.imgur.com/Sf9L15p.jpg" width="100" height="100">
-           <a class="btn btn-light mt-2 btn-sm w-100 h-100 p-0" aria-disabled="true">Felipe Lauton</a>
-            Contatos:
-          <p class="icons-size">
-            <a href=" https://www.linkedin.com/in/felipeoliveiralauton" target="_blank"><i class="fa fa-linkedin-square mr-1 text-dark" aria-hidden="true"></i></a>
-            <a href="https://github.com/FelipeLauton" target="_blank"><i class="fa fa-github-square text-dark" aria-hidden="true"></i></a>
-          </p>
-          </div>
-        </div>
+    <div class="col-md-2">
+      <div class="card-body card-top">
+        <img class="rounded-circle" src="https://i.imgur.com/Sf9L15p.jpg" width="100" height="100">
+        <p class="mt-4">Felipe Lauton</p>
+        <p class="icons-size">
+          <a href=" https://www.linkedin.com/in/felipeoliveiralauton" target="_blank">
+            <i class="fa fa-linkedin-square mr-1" aria-hidden="true"></i>
+          </a>
+          <a href="https://github.com/FelipeLauton" target="_blank">
+            <i class="fa fa-github-square" aria-hidden="true"></i>
+          </a>
+        </p>
       </div>
+    </div>
 
-      <div class="col-md-2 mb-2">
-        <div class="card-body ">
-          <div class="card-top">
-            <img class="rounded-circle" src="https://i.imgur.com/ycaGJzq.jpg" width="100" height="100">
-         
-            <a class="btn btn-light mt-2 btn-sm w-100 h-100 p-0" aria-disabled="true">João Vitor</a>
-            Contatos:
-            <p class="icons-size">
-              <a href="https://www.linkedin.com/in/jo%C3%A3odepaula/" target="_blank"><i class="fa fa-linkedin-square mr-1 text-dark" aria-hidden="true"></i></a>
-              <a href="https://github.com/jaoov" target="_blank"><i class="fa fa-github-square text-dark" aria-hidden="true"></i></a>
-           </p>
-          </div>
-        </div>
+    <div class="col-md-2">
+      <div class="card-body card-top">
+        <img class="rounded-circle" src="https://i.imgur.com/ycaGJzq.jpg" width="100" height="100">
+        <p class="mt-4">João Vitor</p>
+        <p class="icons-size">
+          <a href="https://www.linkedin.com/in/jo%C3%A3odepaula/" target="_blank">
+            <i class="fa fa-linkedin-square mr-1" aria-hidden="true"></i>
+          </a>
+          <a href="https://github.com/jaoov" target="_blank">
+            <i class="fa fa-github-square" aria-hidden="true"></i>
+          </a>
+        </p>
       </div>
+    </div>
 
-      <div class="col-md-2 mb-2">
-        <div class="card-body ">
-          <div class="card-top">
-            <img class="rounded-circle" src="https://i.imgur.com/xhkgzzs.jpg" width="100" height="100">
-            <a class="btn btn-light mt-2 btn-sm w-100 h-100 p-0" aria-disabled="true">Karina Souza</a>
-            Contatos:
-            <p class="icons-size">
-              <a href="https://www.linkedin.com/in/karinasouza-krn/" target="_blank"><i class="fa fa-linkedin-square mr-1 text-dark" aria-hidden="true"></i></a>
-              <a href="https://github.com/Karina-SSm" target="_blank"><i class="fa fa-github-square text-dark" aria-hidden="true"></i></a>
-           </p>
-          </div>
-        </div>
+    <div class="col-md-2">
+      <div class="card-body card-top">
+        <img class="rounded-circle" src="https://i.imgur.com/xhkgzzs.jpg" width="100" height="100">
+        <p class="mt-4">Karina Souza</p>
+        <p class="icons-size">
+          <a href="https://www.linkedin.com/in/karinasouza-krn/" target="_blank">
+            <i class="fa fa-linkedin-square mr-1" aria-hidden="true"></i>
+          </a>
+          <a href="https://github.com/Karina-SSm" target="_blank">
+            <i class="fa fa-github-square" aria-hidden="true"></i>
+          </a>
+        </p>
       </div>
+    </div>
 
-      <div class="col-md-2 mb-2">
-        <div class="card-body">
-          <div class="card-top">
-            <img class="rounded-circle" src="https://i.imgur.com/xJYo4P9.jpg" width="100" height="100">
-            <a class="btn btn-light mt-2 btn-sm w-100 h-100 p-0" aria-disabled="true">Matheus Rufino</a>
-            Contatos:
-            <p class="icons-size">
-              <a href="https://www.linkedin.com/in/mathrufino/" target="_blank"><i class="fa fa-linkedin-square mr-1 text-dark" aria-hidden="true"></i></a>
-              <a href="https://github.com/matheusrcruz" target="_blank"><i class="fa fa-github-square text-dark" aria-hidden="true"></i></a>
-           </p>
-          </div>     
-        </div>
+    <div class="col-md-2">
+      <div class="card-body card-top">
+        <img class="rounded-circle" src="https://i.imgur.com/xJYo4P9.jpg" width="100" height="100">
+        <p class="mt-4">Matheus Rufino</p>
+        <p class="icons-size">
+          <a href="https://www.linkedin.com/in/mathrufino/" target="_blank">
+            <i class="fa fa-linkedin-square mr-1" aria-hidden="true"></i>
+          </a>
+          <a href="https://github.com/matheusrcruz" target="_blank">
+            <i class="fa fa-github-square" aria-hidden="true"></i>
+          </a>
+        </p>
       </div>
+    </div>
 
-      <div class="col-md-2 mb-2">
-        <div class="card-body">     
-          <div class="card-top">
-            <img class="rounded-circle" src="https://i.imgur.com/566Bedg.jpg" width="100" height="100">
-            <a class="btn btn-light mt-2 btn-sm w-100 h-100 p-0" aria-disabled="true">Nicoli Fernandes</a>
-            Contatos:
-            <p class="icons-size">
-             <a href="https://www.linkedin.com/in/nicolifernandes/" target="_blank"><i class="fa fa-linkedin-square mr-1 text-dark" aria-hidden="true"></i></a>
-             <a href="https://github.com/nclfrnnds" target="_blank"><i class="fa fa-github-square text-dark" aria-hidden="true"></i></a>
-           </p>
-          </div>
-        </div>
+    <div class="col-md-2">
+      <div class="card-body card-top">
+        <img class="rounded-circle" src="https://i.imgur.com/566Bedg.jpg" width="100" height="100">
+        <p class="mt-4">Nicoli Fernandes</p>
+        <p class="icons-size">
+          <a href="https://www.linkedin.com/in/nicolifernandes/" target="_blank">
+            <i class="fa fa-linkedin-square mr-1" aria-hidden="true"></i>
+          </a>
+          <a href="https://github.com/nclfrnnds" target="_blank">
+            <i class="fa fa-github-square" aria-hidden="true"></i>
+          </a>
+        </p>
       </div>
+    </div>
 
-
-
-  </div><!--Row-->
-
-</div><!--Container-->
+  </div>
+  <!--Row-->
+</div>
+<!--Container-->
