--- a/redePets-frontend/src/app/component/delete/postagem-delete/postagem-delete.component.html
+++ b/redePets-frontend/src/app/component/delete/postagem-delete/postagem-delete.component.html
@@ -20,7 +20,7 @@
           <div class="row d-flex align-items-center">
               <div class="col-md-2 pr-0 d-flex justify-content-center">
 
-                <img src="{{foto}}" alt="Foto do usuário" width="50px" height="50px"
+                <img src="{{foto}}" alt="" width="50px" height="50px"
               class="card-foto mr-2">
 
               </div>
@@ -46,7 +46,7 @@
 
               <hr>
 
-              <img src="{{postagem.imagem}}" alt="Foto"
+              <img src="{{postagem.imagem}}" alt=""
                 class="col-md-12 d-flex justify-content-center mb-4">
 
             </div>
