--- a/redePets-frontend/src/app/component/edit/tema-edit/tema-edit.component.html
+++ b/redePets-frontend/src/app/component/edit/tema-edit/tema-edit.component.html
@@ -9,15 +9,19 @@
   <div class="row d-flex justify-content-center">
     <div class="col-md-6">
 
-      <div class="form-group">
-        <label for="nome">Nome</label>
+      <div class="form-group m-5">
+        <!--
+        <label for="nome">Nome do tema</label>
+        -->
         <input type="text" class="form-control" id="nome" [(ngModel)]="tema.nome">
       </div>
 
+      <!--
       <div class="form-group">
         <label for="descricao">Descrição</label>
         <input type="text" class="form-control" id="descricao" [(ngModel)]="tema.descricao">
       </div>
+      -->
 
       <div class="d-flex justify-content-center">
         <button class="btn btn-outline-dark mr-3" routerLink="/tema">Cancelar</button>
@@ -26,6 +30,6 @@
 
     </div>
   </div>
- 
+
 <br>
 </div>
