--- a/redePets-frontend/src/app/component/edit/usuario-edit/usuario-edit.component.html
+++ b/redePets-frontend/src/app/component/edit/usuario-edit/usuario-edit.component.html
@@ -1,18 +1,17 @@
-<div class="container-fluid">
+<div class="container mt-5 mb-5">
+
+  <div class="row">
+    <div class="col-md-12">
+      <h1 class="text-center text-secondary">Atualizar meu usuário</h1>
+    </div>
+  </div>
+
   <div class="row d-flex justify-content-center">
-
-    <div class="col-md-12 mt-5 mb-5">
-      <form class="form card" action="">
-
-        <div class="card-top">
-          <h1 class="text-center txt-marrom">Cadastrar</h1>
-          <img class="im-50 text-center mt-3" src="https://i.imgur.com/AlJ2JW4.png" alt="Ícone de gato">
-        </div>
+    <div class="col-md-10">
 
         <div class="form-group">
           <label for="nome">Nome</label>
-          <input [(ngModel)]="usuario.nome" class="form-control" type="text" name="nome" id="nome"
-            placeholder="Insira seu nome">
+          <input [(ngModel)]="usuario.nome" class="form-control" type="text" name="nome" id="nome" placeholder="Insira seu nome">
         </div>
 
         <div class="form-group">
@@ -48,12 +47,11 @@
           </select>
         </div>
 
-        <div class="d-flex justify-content-center mt-5">
-          <button type="submit" class="btn btn-outline-dark mr-4" (click)='cadastrar()'>Cadastrar</button>
-          <button type="submit" class="btn btn-outline-dark" routerLink='/'>Cancelar</button>
-        </div>
+      <div class="d-flex justify-content-center mt-5">
+        <button type="submit" class="btn btn btn-outline-dark mr-4" (click)="atualizar()">Atualizar</button>
+        <button type="submit" class="btn btn btn-outline-dark" routerLink="/inicio">Cancelar</button>
+      </div>
 
-      </form>
     </div>
   </div>
 
