--- a/redePets-frontend/src/app/component/entrar/entrar.component.html
+++ b/redePets-frontend/src/app/component/entrar/entrar.component.html
@@ -6,7 +6,7 @@
 
         <div class="card-top">
           <h1 class="text-center txt-marrom">Entrar</h1>
-          <img class="im-50 text-center mt-3" src="https://i.imgur.com/eA1LIxO.png" alt="imagem do gato">
+          <img class="im-50 text-center mt-3" src="https://i.imgur.com/eA1LIxO.png" alt="Ícone de cachorro">
         </div>
 
         <div class="form-group">
